--- a/css/DayPicker.scss
+++ b/css/DayPicker.scss
@@ -2,13 +2,15 @@
 
 .DayPicker {
   background: $react-dates-color-white;
+  width: 328px !important;
+  padding: 10px 0px;
   position: relative;
   text-align: left;
 }
 
 .DayPicker--horizontal {
   background: $react-dates-color-white;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.07);
+  //box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.07);
   border-radius: 3px;
 
   &.DayPicker--portal {
