--- a/css/DayPickerNavigation.scss
+++ b/css/DayPickerNavigation.scss
@@ -12,14 +12,11 @@
 
 .DayPickerNavigation__prev--default,
 .DayPickerNavigation__next--default {
-  border: 1px solid $react-dates-color-border-light;
+  border: none;
+  box-shadow: none;
+  outline: none;
   background-color: $react-dates-color-white;
   color: $react-dates-color-placeholder-text;
-
-  &:focus,
-  &:hover {
-    border: 1px solid $react-dates-color-border-medium;
-  }
 
   &:active {
     background: darken($react-dates-color-white, 5%);
@@ -59,8 +56,8 @@
   .DayPickerNavigation__prev--default,
   .DayPickerNavigation__next--default {
     svg {
-      height: 19px;
-      width: 19px;
+      height: 15px;
+      width: 15px;
       fill: $react-dates-color-gray-light;
     }
   }
