--- a/lib/css/_datepicker.css
+++ b/lib/css/_datepicker.css
@@ -121,8 +121,8 @@
 
 .CalendarMonth__caption {
   color: #3c3f40;
-  margin-top: 7px;
-  font-size: 18px;
+  margin-top: 9px;
+  font-size: 16px;
   text-align: center;
   margin-bottom: 2px;
   caption-side: initial; }
@@ -250,13 +250,11 @@
 
 .DayPickerNavigation__prev--default,
 .DayPickerNavigation__next--default {
-  border: 1px solid #dce0e0;
+  border: none;
+  box-shadow: none;
+  outline: none;
   background-color: #fff;
   color: #757575; }
-  .DayPickerNavigation__prev--default:focus, .DayPickerNavigation__prev--default:hover,
-  .DayPickerNavigation__next--default:focus,
-  .DayPickerNavigation__next--default:hover {
-    border: 1px solid #c4c4c4; }
   .DayPickerNavigation__prev--default:active,
   .DayPickerNavigation__next--default:active {
     background: #f2f2f2; }
@@ -282,8 +280,8 @@
     left: 22px; }
   .DayPickerNavigation--horizontal .DayPickerNavigation__prev--default svg,
   .DayPickerNavigation--horizontal .DayPickerNavigation__next--default svg {
-    height: 19px;
-    width: 19px;
+    height: 15px;
+    width: 15px;
     fill: #82888a; }
 
 .DayPickerNavigation--vertical {
