minor style fix

--- a/css/SingleDatePicker.scss
+++ b/css/SingleDatePicker.scss
@@ -89,6 +89,7 @@
     cursor: pointer;
     text-decoration: none;
     background-color: $react-dates-color-primary;
+    font-weight: 500;
     color: #ffffff;
     border-radius: 3px;
   }
