--- a/css/DateInput.scss
+++ b/css/DateInput.scss
@@ -4,9 +4,9 @@ $caret-top: $react-dates-spacing-vertical-picker - $react-dates-width-tooltip-ar
   width: 455px;
   // font
   font-weight: 200;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
-  color: $react-dates-color-placeholder-text;
+  color: inherit;
   margin: 0;
   padding: 8px;
 
