--- a/css/variables.scss
+++ b/css/variables.scss
@@ -17,7 +17,7 @@ $react-dates-color-gray-lighter: lighten($react-dates-color-gray, 45%) !default;
 $react-dates-color-gray-lightest: lighten($react-dates-color-gray, 60%) !default;
 $react-dates-color-highlighted: #ffe8bc !default;
 
-$react-dates-color-border: #dbdbdb !default;
+$react-dates-color-border: #ededed !default;
 $react-dates-color-border-light: #dce0e0 !default;
 $react-dates-color-border-medium: #c4c4c4 !default;
 $react-dates-color-placeholder-text: #757575 !default;
