--- a/css/CalendarDay.scss
+++ b/css/CalendarDay.scss
@@ -5,6 +5,10 @@
   box-sizing: border-box;
   color: $react-dates-color-gray;
   cursor: pointer;
+
+  button {
+    @extend .CalendarDay__button
+  }
 }
 
 .CalendarDay__button {
