--- a/css/SingleDatePickerInput.scss
+++ b/css/SingleDatePickerInput.scss
@@ -1,8 +1,10 @@
 @import 'variables';
 
 .SingleDatePickerInput {
+  display: flex;
   background-color: $react-dates-color-white;
   border: 1px solid $react-dates-color-border;
+  border-top: none;
 }
 
 .SingleDatePickerInput--rtl {
