--- a/css/DateInput.scss
+++ b/css/DateInput.scss
@@ -8,7 +8,7 @@ $caret-top: $react-dates-spacing-vertical-picker - $react-dates-width-tooltip-ar
   line-height: 24px;
   color: inherit;
   margin: 0;
-  padding: 8px;
+  padding: 0 8px;
 
   background: $react-dates-color-white;
   position: relative;
