--- a/css/SingleDatePickerInput.scss
+++ b/css/SingleDatePickerInput.scss
@@ -4,7 +4,7 @@
   display: flex;
   background-color: $react-dates-color-white;
   border: 1px solid $react-dates-color-border;
-  border-radius: 4px;
+  border-radius: 0 0 4px 4px;
   border-top: none;
 }
 
