--- a/css/DayPicker.scss
+++ b/css/DayPicker.scss
@@ -2,7 +2,7 @@
 
 .DayPicker {
   background: $react-dates-color-white;
-  width: 328px !important;
+  width: 75% !important;
   padding: 10px 0px;
   position: relative;
   text-align: left;
