--- a/css/SingleDatePicker.scss
+++ b/css/SingleDatePicker.scss
@@ -101,7 +101,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 455px;
+  width: 100%;
   height: 59px;
   padding: 20px;
   font-family: Roboto;
