--- a/lib/css/_datepicker.css
+++ b/lib/css/_datepicker.css
@@ -159,7 +159,7 @@
 
 .DayPicker {
   background: #fff;
-  width: 328px !important;
+  width: 75% !important;
   padding: 10px 0px;
   position: relative;
   text-align: left; }
@@ -714,7 +714,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 455px;
+  width: 100%;
   height: 59px;
   padding: 20px;
   font-family: Roboto;
