--- a/css/DayPicker.scss
+++ b/css/DayPicker.scss
@@ -8,6 +8,10 @@
   text-align: left;
 }
 
+.DayPicker--mobile {
+  width: 100% !important;
+}
+
 .DayPicker--horizontal {
   background: $react-dates-color-white;
   //box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.07);
