--- a/lib/css/_datepicker.css
+++ b/lib/css/_datepicker.css
@@ -164,6 +164,9 @@
   position: relative;
   text-align: left; }
 
+.DayPicker--mobile {
+  width: 100% !important; }
+
 .DayPicker--horizontal {
   background: #fff;
   border-radius: 3px; }
@@ -686,7 +689,7 @@
     text-decoration: none; }
 
 .TimeListItem {
-  width: 83px;
+  width: 100%;
   height: 24px;
   margin-bottom: 14px;
   font-family: Roboto;
